--- a/changelogs/.plugin-cache.yaml
+++ b/changelogs/.plugin-cache.yaml
@@ -1,3 +1,4 @@
+---
 objects:
   role: {}
 plugins:
@@ -32,15 +33,13 @@ plugins:
       namespace: vsp
       version_added: 3.2.0
     hv_disk_drive_facts:
-      description: Retrieves information about hard drives from Hitachi VSP storage
-        systems.
+      description: Retrieves information about hard drives from Hitachi VSP storage systems.
       name: hv_disk_drive_facts
       namespace: vsp
       version_added: 3.2.0
-    hv_external_parity_group_facts:
-      description: Retrieves information about External Parity Group from Hitachi
-        VSP storage systems.
-      name: hv_external_parity_group_facts
+    hv_external_paritygroup_facts:
+      description: Retrieves information about External Parity Group from Hitachi VSP storage systems.
+      name: hv_external_paritygroup_facts
       namespace: vsp
       version_added: 3.5.0
     hv_external_path_group:
@@ -49,8 +48,7 @@ plugins:
       namespace: vsp
       version_added: 3.5.0
     hv_external_path_group_facts:
-      description: Retrieves information about External Path Group from Hitachi VSP
-        storage systems.
+      description: Retrieves information about External Path Group from Hitachi VSP storage systems.
       name: hv_external_path_group_facts
       namespace: vsp
       version_added: 3.5.0
@@ -60,8 +58,7 @@ plugins:
       namespace: vsp
       version_added: 3.3.0
     hv_external_volume_facts:
-      description: Retrieves information about External Volume from Hitachi VSP storage
-        systems.
+      description: Retrieves information about External Volume from Hitachi VSP storage systems.
       name: hv_external_volume_facts
       namespace: vsp
       version_added: 3.3.0
@@ -91,14 +88,12 @@ plugins:
       namespace: vsp
       version_added: 3.0.0
     hv_gateway_subscription_facts:
-      description: Retrieves information about resources of a subscriber on Hitachi
-        VSP storage systems.
+      description: Retrieves information about resources of a subscriber on Hitachi VSP storage systems.
       name: hv_gateway_subscription_facts
       namespace: vsp
       version_added: 3.1.0
     hv_gateway_unsubscribe_resource:
-      description: Manages un-subscription of resources for a subscriber on Hitachi
-        VSP storage systems.
+      description: Manages un-subscription of resources for a subscriber on Hitachi VSP storage systems.
       name: hv_gateway_unsubscribe_resource
       namespace: vsp
       version_added: 3.1.0
@@ -108,8 +103,7 @@ plugins:
       namespace: vsp
       version_added: 3.0.0
     hv_hg_facts:
-      description: Retrieves host group information from a specified Hitachi VSP storage
-        system.
+      description: Retrieves host group information from a specified Hitachi VSP storage system.
       name: hv_hg_facts
       namespace: vsp
       version_added: 3.0.0
@@ -124,8 +118,7 @@ plugins:
       namespace: vsp
       version_added: 3.1.0
     hv_iscsi_remote_connection:
-      description: Manages Remote connections through iSCSI ports on Hitachi VSP storage
-        systems.
+      description: Manages Remote connections through iSCSI ports on Hitachi VSP storage systems.
       name: hv_iscsi_remote_connection
       namespace: vsp
       version_added: 3.3.0
@@ -140,20 +133,17 @@ plugins:
       namespace: vsp
       version_added: 3.0.0
     hv_iscsi_target_facts:
-      description: Retrieves information about iscsi targets from Hitachi VSP storage
-        systems.
+      description: Retrieves information about iscsi targets from Hitachi VSP storage systems.
       name: hv_iscsi_target_facts
       namespace: vsp
       version_added: 3.0.0
     hv_journal_volume:
-      description: Create, update, expand, shrink, delete journal volume from Hitachi
-        VSP storage systems.
+      description: Create, update, expand, shrink, delete journal volume from Hitachi VSP storage systems.
       name: hv_journal_volume
       namespace: vsp
       version_added: 3.2.0
     hv_journal_volume_facts:
-      description: Retrieves information about Journal Volumes from Hitachi VSP storage
-        systems.
+      description: Retrieves information about Journal Volumes from Hitachi VSP storage systems.
       name: hv_journal_volume_facts
       namespace: vsp
       version_added: 3.2.0
@@ -163,8 +153,7 @@ plugins:
       namespace: vsp
       version_added: 3.0.0
     hv_ldev_facts:
-      description: Retrieves information about logical devices (LDEVs) from Hitachi
-        VSP storage systems.
+      description: Retrieves information about logical devices (LDEVs) from Hitachi VSP storage systems.
       name: hv_ldev_facts
       namespace: vsp
       version_added: 3.0.0
@@ -179,8 +168,7 @@ plugins:
       namespace: vsp
       version_added: 3.2.0
     hv_nvm_subsystems_facts:
-      description: Retrieves information about NVM subsystems from Hitachi VSP storage
-        systems.
+      description: Retrieves information about NVM subsystems from Hitachi VSP storage systems.
       name: hv_nvm_subsystems_facts
       namespace: vsp
       version_added: 3.1.0
@@ -190,8 +178,7 @@ plugins:
       namespace: vsp
       version_added: 3.2.0
     hv_paritygroup_facts:
-      description: retrieves information about parity groups from Hitachi VSP storage
-        systems.
+      description: retrieves information about parity groups from Hitachi VSP storage systems.
       name: hv_paritygroup_facts
       namespace: vsp
       version_added: 3.0.0
@@ -201,8 +188,7 @@ plugins:
       namespace: vsp
       version_added: 3.3.0
     hv_quorum_disk_facts:
-      description: Retrieves information about Quorum Disks from Hitachi VSP storage
-        systems.
+      description: Retrieves information about Quorum Disks from Hitachi VSP storage systems.
       name: hv_quorum_disk_facts
       namespace: vsp
       version_added: 3.3.0
@@ -222,20 +208,17 @@ plugins:
       namespace: vsp
       version_added: 3.2.0
     hv_remote_copy_group_facts:
-      description: Retrieves Remote Copy Groups information from Hitachi VSP storage
-        systems.
+      description: Retrieves Remote Copy Groups information from Hitachi VSP storage systems.
       name: hv_remote_copy_group_facts
       namespace: vsp
       version_added: 3.2.0
     hv_remote_storage_registration:
-      description: Manages remote storage registration and unregistration on Hitachi
-        VSP storage systems.
+      description: Manages remote storage registration and unregistration on Hitachi VSP storage systems.
       name: hv_remote_storage_registration
       namespace: vsp
       version_added: 3.2.0
     hv_remote_storage_registration_facts:
-      description: Retrieves remote storage registration information from Hitachi
-        VSP storage systems.
+      description: Retrieves remote storage registration information from Hitachi VSP storage systems.
       name: hv_remote_storage_registration_facts
       namespace: vsp
       version_added: 3.2.0
@@ -250,8 +233,7 @@ plugins:
       namespace: vsp
       version_added: 3.2.0
     hv_resource_group_lock:
-      description: Allows the locking and unlocking of resource groups on Hitachi
-        VSP storage systems.
+      description: Allows the locking and unlocking of resource groups on Hitachi VSP storage systems.
       name: hv_resource_group_lock
       namespace: vsp
       version_added: 3.2.0
@@ -261,8 +243,7 @@ plugins:
       namespace: sds_block
       version_added: 3.0.0
     hv_sds_block_chap_user_facts:
-      description: Retrieves information about Hitachi SDS block storage system CHAP
-        users.
+      description: Retrieves information about Hitachi SDS block storage system CHAP users.
       name: hv_sds_block_chap_user_facts
       namespace: sds_block
       version_added: 3.0.0
@@ -272,26 +253,22 @@ plugins:
       namespace: sds_block
       version_added: 3.0.0
     hv_sds_block_compute_node_facts:
-      description: Retrieves information about Hitachi SDS block storage system compute
-        nodes.
+      description: Retrieves information about Hitachi SDS block storage system compute nodes.
       name: hv_sds_block_compute_node_facts
       namespace: sds_block
       version_added: 3.0.0
     hv_sds_block_compute_port_authentication:
-      description: Manages Hitachi SDS block storage system compute port authentication
-        mode settings.
+      description: Manages Hitachi SDS block storage system compute port authentication mode settings.
       name: hv_sds_block_compute_port_authentication
       namespace: sds_block
       version_added: 3.0.0
     hv_sds_block_port_facts:
-      description: Retrieves information about Hitachi SDS block storage system compute
-        ports.
+      description: Retrieves information about Hitachi SDS block storage system compute ports.
       name: hv_sds_block_port_facts
       namespace: sds_block
       version_added: 3.0.0
     hv_sds_block_storage_system_facts:
-      description: Retrieves information about a specific Hitachi SDS block storage
-        system.
+      description: Retrieves information about a specific Hitachi SDS block storage system.
       name: hv_sds_block_storage_system_facts
       namespace: sds_block
       version_added: 3.0.0
@@ -306,14 +283,12 @@ plugins:
       namespace: sds_block
       version_added: 3.0.0
     hv_sds_block_vps:
-      description: Manages Hitachi SDS block storage system Virtual Private Storages
-        (VPS) volume ADR setting.
+      description: Manages Hitachi SDS block storage system Virtual Private Storages (VPS) volume ADR setting.
       name: hv_sds_block_vps
       namespace: sds_block
       version_added: 3.1.0
     hv_sds_block_vps_facts:
-      description: Retrieves information about Virtual Private Storages (VPS) of Hitachi
-        SDS block storage system.
+      description: Retrieves information about Virtual Private Storages (VPS) of Hitachi SDS block storage system.
       name: hv_sds_block_vps_facts
       namespace: sds_block
       version_added: 3.1.0
@@ -323,8 +298,7 @@ plugins:
       namespace: vsp
       version_added: 3.2.0
     hv_shadow_image_group_facts:
-      description: Retrieves Local Copy Groups information from Hitachi VSP storage
-        systems.
+      description: Retrieves Local Copy Groups information from Hitachi VSP storage systems.
       name: hv_shadow_image_group_facts
       namespace: vsp
       version_added: 3.2.0
@@ -334,8 +308,7 @@ plugins:
       namespace: vsp
       version_added: 3.0.0
     hv_shadow_image_pair_facts:
-      description: Retrieves information about shadow image pairs from Hitachi VSP
-        storage systems.
+      description: Retrieves information about shadow image pairs from Hitachi VSP storage systems.
       name: hv_shadow_image_pair_facts
       namespace: vsp
       version_added: 3.0.0
@@ -350,14 +323,12 @@ plugins:
       namespace: vsp
       version_added: 3.0.0
     hv_snapshot_group:
-      description: Manages snapshots in units of snapshot groups on Hitachi VSP storage
-        systems.
+      description: Manages snapshots in units of snapshot groups on Hitachi VSP storage systems.
       name: hv_snapshot_group
       namespace: vsp
       version_added: 3.2.0
     hv_snapshot_group_facts:
-      description: Retrieves snapshot information in units of snapshot groups from
-        Hitachi VSP storage systems.
+      description: Retrieves snapshot information in units of snapshot groups from Hitachi VSP storage systems.
       name: hv_snapshot_group_facts
       namespace: vsp
       version_added: 3.2.0
@@ -436,4 +407,4 @@ plugins:
   strategy: {}
   test: {}
   vars: {}
-version: 3.5.0
+version: 3.5.1
